# markov_chain

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json  main.cpp  markov_chain++.sln  markov_chain++.vcxproj  markov_chain++.vcxproj.filters  markov_chain.cpp  markov_chain.h  tokenizer.cpp  tokenizer.h  vectorizer.cpp  vectorizer.h
markov_chain/: CMakeLists.txt  markov_chain.cpp
markov_chain/include/: markov_chain.h  node.h
nn/: CMakeLists.txt  nn.cpp
nn/include/: nn.h
nn/include/nn/activation/: activation.h  sigmoid.h
nn/include/nn/initializer/: initializer.h
nn/include/nn/layer/: dense.h  layer.h
nn/src/: dense.cpp  layer.cpp
src/: CMakeLists.txt  main.cpp
vectorizer/: CMakeLists.txt  vectorizer.cpp
vectorizer/include/: vectorizer.h
